started debugging SoftMaxTree.cu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,19 +24,19 @@ LINK_DIRECTORIES("${Torch_INSTALL_LIB}")
 SET(src-cuda init.cu)
 SET(luasrc init.lua)
 
-CUDA_ADD_LIBRARY(cunn MODULE ${src-cuda})
-TARGET_LINK_LIBRARIES(cunn luaT THC TH)
+CUDA_ADD_LIBRARY(cunnx MODULE ${src-cuda})
+TARGET_LINK_LIBRARIES(cunnx luaT THC TH)
 IF(APPLE)
-  SET_TARGET_PROPERTIES(cunn PROPERTIES
+  SET_TARGET_PROPERTIES(cunnx PROPERTIES
     LINK_FLAGS "-undefined dynamic_lookup")
 ENDIF()
 
 ### Torch packages supposes libraries prefix is "lib"
-SET_TARGET_PROPERTIES(cunn PROPERTIES
+SET_TARGET_PROPERTIES(cunnx PROPERTIES
   PREFIX "lib"
   IMPORT_PREFIX "lib")
     
-INSTALL(TARGETS cunn
+INSTALL(TARGETS cunnx
   RUNTIME DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}"
   LIBRARY DESTINATION "${Torch_INSTALL_LUA_CPATH_SUBDIR}")
 
