--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,8 @@ INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/THC")
 LINK_DIRECTORIES("${Torch_INSTALL_LIB}")
 
 SET(src-cuda init.cu)
-SET(luasrc init.lua)
+FILE(GLOB luasrc *.lua)
+SET(luasrc ${luasrc} test/test.lua)
 
 CUDA_ADD_LIBRARY(cunnx MODULE ${src-cuda})
 TARGET_LINK_LIBRARIES(cunnx luaT THC TH)
