BlockSparse_updateOutput compiles

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ LINK_DIRECTORIES("${Torch_INSTALL_LIB}")
 SET(src-cuda init.cu)
 FILE(GLOB luasrc *.lua)
 SET(luasrc ${luasrc} test/test.lua)
+#ADD_TORCH_PACKAGE(cunnx "${src-cuda}" "${luasrc}" "Experiment cuda nn library")
 
 CUDA_ADD_LIBRARY(cunnx MODULE ${src-cuda})
 TARGET_LINK_LIBRARIES(cunnx luaT THC TH)
