--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,19 @@ IF(APPLE)
   endif()
 ENDIF()
 
-FIND_PACKAGE(CUDA 4.0 REQUIRED)
+FIND_PACKAGE(CUDA 6.5 REQUIRED)
 
-LIST(APPEND CUDA_NVCC_FLAGS "-arch=sm_20")
+# Detect CUDA architecture and get best NVCC flags
+IF(DEFINED CUDA_HAS_FP16)
+  # New CMake macro, comes with FindCUDA
+  CUDA_SELECT_NVCC_ARCH_FLAGS(NVCC_FLAGS_EXTRA $ENV{TORCH_CUDA_ARCH_LIST})
+ELSE()
+  # Old way of getting the flags, with extra include file
+  INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/cmake/FindCudaArch.cmake)
+  SELECT_NVCC_ARCH_FLAGS(NVCC_FLAGS_EXTRA)
+ENDIF()
+LIST(APPEND CUDA_NVCC_FLAGS ${NVCC_FLAGS_EXTRA})
+
 
 INCLUDE_DIRECTORIES("${Torch_INSTALL_INCLUDE}/THC")
 LINK_DIRECTORIES("${Torch_INSTALL_LIB}")
